03/20 실습 문제 풀이 완료

--- a/99_Practice/src/main/webapp/views/practice1_random.html
+++ b/99_Practice/src/main/webapp/views/practice1_random.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<!-- TODO: RandomNumberServlet 클래스가 요청을 받을 수 있도록 action 속성 작성하기 -->
-	<form action="/practice/practice1_random.do" method="get">
+	<form action="/practice/randomNumber" method="get"> <!-- 절대경로로 작성하기 -->
 		<button type="submit" id="btn_go">GO</button>
 	</form>
 </body>
